--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Raleway:wght@300&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./style.scss">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 	
  <div class="card-white" id="introduction"> 
 		<h1>Bonjour, je suis Valentine!</h1>
-	<img src="images/profile.png" class="img-circle" alt="Valentine Clauss" width="200px" height="250px">
+	<img src="images/profile.png" class="img-circle" alt="Valentine Clauss">
 	<p> Je suis en première année à l'IESEG school of management, j'aime la musique et les voyages...
 	</p>
 	<a href="http://lewagon.com" class="btm-blue" target="_blank">Discover le Wagon</a>
